[package]
name = "ssh-keyonly"
version = "0.1.0"
description = "Audit an ssh server for supported authentication methods"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/kpcyrd/ssh-keyonly"
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
russh = "0.56"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
